--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -7,38 +7,28 @@
 
     <parent>
         <groupId>com.dornach</groupId>
-        <artifactId>microservices-training</artifactId>
+        <artifactId>microservices-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>user-service</artifactId>
     <name>User Service</name>
-    <description>User management microservice</description>
+    <description>Identity and user management service</description>
 
     <dependencies>
-        <!-- JPA + PostgreSQL -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!-- H2 for local development -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <!-- Dependencies for later steps (uncomment when needed) -->
-        <!--
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-        </dependency>
-        -->
     </dependencies>
 </project>
