--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -1,76 +1,109 @@
-server:
-  port: 8083
-
 spring:
   application:
     name: order-service
-
+  threads:
+    virtual:
+      enabled: true
   datasource:
     url: jdbc:h2:mem:orderdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
-
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
-
+    show-sql: false
   h2:
     console:
       enabled: true
       path: /h2-console
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/dornach
+      client:
+        registration:
+          shipment-service:
+            provider: keycloak
+            client-id: order-service-client
+            client-secret: ${ORDER_SERVICE_CLIENT_SECRET:secret}
+            authorization-grant-type: client_credentials
+            scope: openid
+        provider:
+          keycloak:
+            token-uri: http://localhost:8080/realms/dornach/protocol/openid-connect/token
 
-# Service URLs (Step 2)
-user:
-  service:
-    url: http://localhost:8081
+server:
+  port: 8083
 
 shipment:
   service:
     url: http://localhost:8082
 
-# Resilience4j (Step 2 - Exercise 3)
-# TODO: Configure retry and timeout
-# resilience4j:
-#   retry:
-#     instances:
-#       userService:
-#         maxAttempts: ???
-#         waitDuration: ???
-#   timelimiter:
-#     instances:
-#       userService:
-#         timeoutDuration: ???
+user:
+  service:
+    url: http://localhost:8081
 
-# Actuator
 management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics
+
+logging:
+  pattern:
+    correlation: "[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+  level:
+    com.dornach: DEBUG
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
+resilience4j:
+  retry:
+    instances:
+      shipmentService:
+        maxAttempts: 3
+        waitDuration: 500ms
+  timelimiter:
+    instances:
+      shipmentService:
+        timeoutDuration: 2s
 
 ---
-# Docker profile
 spring:
   config:
     activate:
       on-profile: docker
-
   datasource:
     url: jdbc:postgresql://postgres:5432/dornach
+    driver-class-name: org.postgresql.Driver
     username: dornach
     password: dornach
-    driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
-
-user:
-  service:
-    url: http://user-service:8081
+  h2:
+    console:
+      enabled: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://keycloak:8080/realms/dornach
+      client:
+        provider:
+          keycloak:
+            token-uri: http://keycloak:8080/realms/dornach/protocol/openid-connect/token
 
 shipment:
   service:
     url: http://shipment-service:8082
+
+user:
+  service:
+    url: http://user-service:8081
