--- a/shipment-service/pom.xml
+++ b/shipment-service/pom.xml
@@ -7,28 +7,27 @@
 
     <parent>
         <groupId>com.dornach</groupId>
-        <artifactId>microservices-training</artifactId>
+        <artifactId>microservices-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>shipment-service</artifactId>
     <name>Shipment Service</name>
-    <description>Shipment tracking microservice</description>
+    <description>Core business shipment management service</description>
 
     <dependencies>
-        <!-- JPA + PostgreSQL -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
