--- a/shipment-service/src/main/resources/application.yaml
+++ b/shipment-service/src/main/resources/application.yaml
@@ -1,46 +1,67 @@
-server:
-  port: 8082
-
 spring:
   application:
     name: shipment-service
-
+  threads:
+    virtual:
+      enabled: true
   datasource:
     url: jdbc:h2:mem:shipmentdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
-
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
-
+    show-sql: false
   h2:
     console:
       enabled: true
       path: /h2-console
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/dornach
 
-# Actuator
+server:
+  port: 8082
+
 management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,metrics
+
+logging:
+  pattern:
+    correlation: "[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+  level:
+    com.dornach: DEBUG
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 
 ---
-# Docker profile
 spring:
   config:
     activate:
       on-profile: docker
-
   datasource:
     url: jdbc:postgresql://postgres:5432/dornach
+    driver-class-name: org.postgresql.Driver
     username: dornach
     password: dornach
-    driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
+  h2:
+    console:
+      enabled: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://keycloak:8080/realms/dornach
