--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -59,8 +59,9 @@ logging:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    enabled: true
   swagger-ui:
+    enabled: true
     path: /swagger-ui.html
 
 resilience4j:
