--- a/shipment-service/src/main/resources/application.yaml
+++ b/shipment-service/src/main/resources/application.yaml
@@ -40,8 +40,9 @@ logging:
 
 springdoc:
   api-docs:
-    path: /api-docs
+    enabled: true
   swagger-ui:
+    enabled: true
     path: /swagger-ui.html
 
 ---
