--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dornach</groupId>
-    <artifactId>microservices-training</artifactId>
+    <artifactId>microservices-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Dornach Microservices Training</name>
+    <name>Dornach Microservices Parent</name>
     <description>Cloud-Native Microservices Training for Dornach</description>
 
     <parent>
@@ -23,15 +23,12 @@
         <module>user-service</module>
         <module>shipment-service</module>
         <module>order-service</module>
-        <!-- notification-service will be added in Bonus B -->
     </modules>
 
     <properties>
         <java.version>21</java.version>
         <springdoc.version>2.8.4</springdoc.version>
         <resilience4j.version>2.2.0</resilience4j.version>
-        <testcontainers-keycloak.version>3.3.0</testcontainers-keycloak.version>
-        <spring-cloud-aws.version>3.2.0</spring-cloud-aws.version>
     </properties>
 
     <dependencyManagement>
@@ -40,13 +37,6 @@
                 <groupId>io.github.resilience4j</groupId>
                 <artifactId>resilience4j-bom</artifactId>
                 <version>${resilience4j.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.awspring.cloud</groupId>
-                <artifactId>spring-cloud-aws-dependencies</artifactId>
-                <version>${spring-cloud-aws.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -66,8 +56,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
-        <!-- OpenAPI Documentation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -78,6 +70,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
