--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -4,6 +4,15 @@ spring:
   threads:
     virtual:
       enabled: true
+  cloud:
+    aws:
+      region:
+        static: us-east-1
+      credentials:
+        access-key: test
+        secret-key: test
+      sqs:
+        endpoint: http://localhost:4566
   datasource:
     url: jdbc:h2:mem:orderdb
     driver-class-name: org.h2.Driver
@@ -44,6 +53,10 @@ shipment:
 user:
   service:
     url: http://localhost:8081
+
+app:
+  sqs:
+    order-events-queue: order-events
 
 management:
   endpoints:
@@ -91,6 +104,10 @@ spring:
   config:
     activate:
       on-profile: docker
+  cloud:
+    aws:
+      sqs:
+        endpoint: http://localstack:4566
   datasource:
     url: jdbc:postgresql://postgres:5432/dornach
     driver-class-name: org.postgresql.Driver
