--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>user-service</module>
         <module>shipment-service</module>
         <module>order-service</module>
+        <module>notification-service</module>
     </modules>
 
     <properties>
@@ -30,6 +31,7 @@
         <springdoc.version>2.8.4</springdoc.version>
         <resilience4j.version>2.2.0</resilience4j.version>
         <testcontainers-keycloak.version>3.3.0</testcontainers-keycloak.version>
+        <spring-cloud-aws.version>3.2.0</spring-cloud-aws.version>
     </properties>
 
     <dependencyManagement>
@@ -38,6 +40,13 @@
                 <groupId>io.github.resilience4j</groupId>
                 <artifactId>resilience4j-bom</artifactId>
                 <version>${resilience4j.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.awspring.cloud</groupId>
+                <artifactId>spring-cloud-aws-dependencies</artifactId>
+                <version>${spring-cloud-aws.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -118,6 +127,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
