--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -27,7 +27,7 @@ spring:
           shipment-service:
             provider: keycloak
             client-id: order-service-client
-            client-secret: ${ORDER_SERVICE_CLIENT_SECRET:order-service-secret-change-in-production}
+            client-secret: ${ORDER_SERVICE_CLIENT_SECRET:order-service-secret}
             authorization-grant-type: client_credentials
             scope: openid
         provider:
@@ -50,6 +50,12 @@ management:
     web:
       exposure:
         include: health,info,metrics
+  tracing:
+    sampling:
+      probability: 1.0  # Sample all requests for demo
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
 
 logging:
   pattern:
@@ -70,9 +76,14 @@ resilience4j:
       shipmentService:
         maxAttempts: 3
         waitDuration: 500ms
+      userService:
+        maxAttempts: 3
+        waitDuration: 500ms
   timelimiter:
     instances:
       shipmentService:
+        timeoutDuration: 2s
+      userService:
         timeoutDuration: 2s
 
 ---
@@ -95,14 +106,14 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/dornach
+          issuer-uri: http://keycloak:8080/realms/dornach
           jwk-set-uri: http://keycloak:8080/realms/dornach/protocol/openid-connect/certs
       client:
         registration:
           shipment-service:
             provider: keycloak
             client-id: order-service-client
-            client-secret: ${ORDER_SERVICE_CLIENT_SECRET:order-service-secret-change-in-production}
+            client-secret: ${ORDER_SERVICE_CLIENT_SECRET:order-service-secret}
             authorization-grant-type: client_credentials
             scope: openid
         provider:
@@ -116,3 +127,8 @@ shipment:
 user:
   service:
     url: http://user-service:8081
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
