--- a/shipment-service/src/main/resources/application.yaml
+++ b/shipment-service/src/main/resources/application.yaml
@@ -31,6 +31,12 @@ management:
     web:
       exposure:
         include: health,info,metrics
+  tracing:
+    sampling:
+      probability: 1.0  # Sample all requests for demo
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
 
 logging:
   pattern:
@@ -65,5 +71,10 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/dornach
+          issuer-uri: http://keycloak:8080/realms/dornach
           jwk-set-uri: http://keycloak:8080/realms/dornach/protocol/openid-connect/certs
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://zipkin:9411/api/v2/spans
