--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ logs/
 # Quick start guides
 QUICK_START_*.md
 
+# Training answers (instructor only)
+exercises/ANSWERS.md
+
 # Maven
 .mvn/wrapper/maven-wrapper.jar
 
