Fix parent POM reference and remove SecurityConfig (not needed at Step 1)

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>com.dornach</groupId>
-        <artifactId>microservices-parent</artifactId>
+        <artifactId>microservices-training</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
