Fix SecurityConfig and parent pom consistency
- Remove profile-based security (docker/!docker)
- Security is now always enabled (JWT required)
- Fix parent pom artifactId: microservices-training (not microservices-parent)
- Simplify SecurityConfig on all 3 services

--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.dornach</groupId>
-    <artifactId>microservices-parent</artifactId>
+    <artifactId>microservices-training</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Dornach Microservices Parent</name>
+    <name>Dornach Microservices Training</name>
     <description>Cloud-Native Microservices Training for Dornach</description>
 
     <parent>
